Fix Overground color not showing

--- a/src/components/stages.less
+++ b/src/components/stages.less
@@ -170,6 +170,7 @@
     .playerMixin();
   }
 
+  &.london_overground,
   &.overground {
     @bg-color: #ee7c0e;
     .playerMixin();
